# apples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Camera.hpp  Shader.hpp  cew.hpp  graphics.hpp  script.hpp
scripts/: default.fragment  default.vertex  init.lua
src/: main.cpp
